--- a/tappr-fe/src/index.css
+++ b/tappr-fe/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#name-error-message {
+  display: none;
+}
+
+.show {
+  display: inline
+}
